Fix chat scrolling bug on mobile

--- a/src/app/home/activities/chat/chat.component.css
+++ b/src/app/home/activities/chat/chat.component.css
@@ -1,6 +1,7 @@
 .scroll-container {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     flex: 1;
 }
 
